--- a/app/src/main/res/layout-w900dp/item_list.xml
+++ b/app/src/main/res/layout-w900dp/item_list.xml
@@ -12,7 +12,7 @@
         android:layout_height="match_parent"/>
 
     <FrameLayout
-        android:id="@+id/storyFragment"
+        android:id="@+id/fragment"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:orientation="vertical">
